--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "axios": "^0.21.1",
     "expo": "~42.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-constants": "~11.0.1",
-    "expo-image-picker": "~10.2.2",
     "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "react": "16.13.1",
