--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "wunderlist-clone-moviles",
-    "slug": "wunderlist-clone-moviles",
+    "name": "Tasks Master",
+    "slug": "Tasks Master",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
