--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/ubuntu": "^0.2.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
@@ -19,6 +20,7 @@
     "expo-constants": "~11.0.1",
     "expo-font": "~9.2.1",
     "expo-image-picker": "~10.2.2",
+    "expo-notifications": "~0.12.3",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.9",
     "react": "16.13.1",
@@ -35,8 +37,7 @@
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^5.3.0",
-    "@react-native-community/datetimepicker": "3.5.2"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
